src-ken&y/objects/Financial_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Chunks_Per_Request__c</fullName>
        <label>Chunks Per Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>Financial Balances</relationshipLabel>
        <relationshipName>Financial_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Financial Balances</relationshipLabel>
        <relationshipName>Financial_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schema__c</fullName>
        <label>Schema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal Year</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Balance</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Financial Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>